package org.ken22.physics.vectors;

import java.util.ArrayList;

public interface Vec {

    int size();

    ArrayList<Double> getVector();
}
