package org.ken22.physics.vectors;

public class Vec4 extends GVec4 {

    public Vec4(double t0, double x0, double y0, double vx0, double vy0, double timeStep, double endTime) {
        super(t0, x0, y0, vx0, vy0, timeStep);
    }


}
